sonarcloud error fix